src/main/java/com/example/citronix/web/errors/FermeUndefinedException.java
package com.example.citronix.web.errors;

public class FermeUndefinedException extends RuntimeException{
    public FermeUndefinedException(String message) {
        super(message);
    }
}
